k8s/vault/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: orbitpay
  labels:
    app.kubernetes.io/name: vault
    app.kubernetes.io/part-of: orbitpay
    app.kubernetes.io/component: secrets-management
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: vault
    app.kubernetes.io/part-of: orbitpay
  ports:
    - name: http
      port: 8200
      targetPort: 8200
      protocol: TCP
